# CustomizeView

NDKDemo1/: settings.gradle
NDKDemo1/CustomizeViewDemo/: build.gradle
NDKDemo1/CustomizeViewDemo/src/main/: AndroidManifest.xml
NDKDemo1/CustomizeViewDemo/src/main/cpp/: CMakeLists.txt  native-lib.cpp
NDKDemo1/CustomizeViewDemo/src/main/java/com/example/ndkdemo1/: JiKeLike.java  MainActivity.java  MyTextView.java  MyView.java  MyView1.java  MyView3.java  MyView4.java  MyView5.java  MyView6.java  SecondActivity.java  SystemUtil.java  ThirdActivity.java
NDKDemo1/CustomizeViewDemo/src/main/res/layout/: activity_main.xml  activity_main1.xml  activity_main2.xml
NDKDemo1/CustomizeViewDemo/src/main/res/values/: attrs.xml
NDKDemo1/gradle/wrapper/: gradle-wrapper.properties
