# For more information about using CMake with Android Studio, read the
# documentation: https://d.android.com/studio/projects/add-native-code.html

# Sets the minimum version of CMake required to build the native library.

cmake_minimum_required(VERSION 3.4.1)

add_library(native-lib

             SHARED

             native-lib.cpp )


find_library(log-lib
              log )

aux_source_directory(. DIR_SRCS)
message("------------------------")
message("DIR_SRCS = :${DIR_SRCS}")



target_link_libraries(native-lib

                       ${log-lib} )